<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <RelativeLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            tools:context="palash.watermelon.letsremind.userinterface.login.EmailSignUpActivity">

            <ImageView
                android:id="@+id/iv_login_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_40"
                android:contentDescription=""
                android:src="@mipmap/ic_launcher_foreground" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_login_image"
                android:layout_marginTop="@dimen/dp_8"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tie_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_label_user_name"
                    android:textColorHint="@android:color/white"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_user_name"
                android:layout_marginTop="@dimen/dp_8"
                android:theme="@style/TextLabel"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tie_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_label_password"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_re_enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_password"
                android:layout_marginTop="@dimen/dp_8"
                android:theme="@style/TextLabel"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tie_reenter_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_label_reenter_password"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>


            <!-- Login Button -->
            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_32"
                android:theme="@style/AppTheme.WhiteButton"
                android:text="@string/btn_sign_up_text"
                android:layout_below="@id/til_re_enter_password" />


            <ProgressBar
                android:id="@+id/indeterminateBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_sign_up"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp_40"
                android:visibility="gone"
                />

        </RelativeLayout>

    </ScrollView>

</layout>